# lotel

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PARITY.md  README.md  build.sh  docker-compose.yml  go.mod  go.sum  setup-beads.sh
.beads/: issues.jsonl  last-touched
.claude/: ralph-loop.local.md
cmd/lotel/: main.go
crates/lotel-cli/: Cargo.toml
crates/lotel-cli/src/: daemon.rs  main.rs  time.rs
crates/lotel-collector/: Cargo.toml
crates/lotel-collector/src/: config.rs  ingestion.rs  lib.rs  model.rs  pipeline.rs  proto_check.rs
crates/lotel-collector/src/exporter/: file.rs
crates/lotel-collector/src/extension/: health.rs
crates/lotel-collector/src/processor/: batch.rs
crates/lotel-collector/src/receiver/: grpc.rs  http.rs
crates/lotel-collector/tests/: integration_test.rs
docs/: IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  QUICK_REFERENCE.md  file-based-architecture.md  statsd-to-otlp-migration.md
logs/: happy_path_1748960627.jsonl  happy_path_1748961116.jsonl  happy_path_1748961180.jsonl  happy_path_1749148773.jsonl  happy_path_1749155465.jsonl  high_throughput_1748960633.jsonl  high_throughput_1748961116.jsonl  high_throughput_1748961180.jsonl  high_throughput_1749155466.jsonl  kafka_failure_1748960631.jsonl  kafka_failure_1748961116.jsonl  kafka_failure_1748961180.jsonl  kafka_failure_1749148773.jsonl  kafka_failure_1749155466.jsonl  load_test_20250605_142434_logs.jsonl  memory_pressure_1748960635.jsonl  memory_pressure_1748961117.jsonl  memory_pressure_1748961180.jsonl  memory_pressure_1749155466.jsonl  stream_failure_1748960629.jsonl  stream_failure_1748961116.jsonl  stream_failure_1748961180.jsonl  stream_failure_1749148773.jsonl  stream_failure_1749155466.jsonl
metrics/: happy_path_1748961116_metrics.json  happy_path_1748961180_metrics.json  happy_path_1749148773_metrics.json  happy_path_1749155465_metrics.json  high_throughput_1748961116_metrics.json  high_throughput_1748961180_metrics.json  high_throughput_1749155466_metrics.json  kafka_failure_1748961116_metrics.json  kafka_failure_1748961180_metrics.json  kafka_failure_1749155466_metrics.json  memory_pressure_1748961117_metrics.json  memory_pressure_1748961180_metrics.json  memory_pressure_1749155466_metrics.json  stream_failure_1748961116_metrics.json  stream_failure_1748961180_metrics.json  stream_failure_1749148773_metrics.json  stream_failure_1749155466_metrics.json
prompts/: big-change.md  cli-refactor.md
scripts/: setup-rust-rewrite-beads.sh  verify.py
traces/: happy_path_1748961116_traces.json  happy_path_1748961180_traces.json  happy_path_1749148773_traces.json  happy_path_1749155465_traces.json  (+13 more)
(+24 files in other folders)
