[package]
name = "lotel-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
opentelemetry-proto = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
lotel-storage = { path = "../lotel-storage" }
tempfile = "3"
